2000-03-17 Elliot Lee <sopwith@redhat.com>
	* calendar/cal-client/Makefile.am,
	calendar/cal-util/Makefile.am, calendar/gui/Makefile.am,
	calendar/pcs/Makefile.am, mail/Makefile.am,
	widgets/e-text/Makefile.am: Fix for srcdir != builddir.

2000-03-14  Dan Winship  <danw@helixcode.com>

	* Makefile.am (SUBDIRS): build shell before mail, since mail
	relies on the shell idl files being compiled.

2000-03-13  Christopher James Lahey  <clahey@helixcode.com>

	* shell/e-shell-view.c: Added an E_FOLDER_CONTACTS section to the
	get_view function.

	* addressbook/demo/Makefile.am: Added files for addressbook bonobo
	component.  Changed non bonobo version to compile as
	test-addressbook.

	* addressbook/demo/addressbook.c,
	addressbook/demo/addressbook.gnorba,
	addressbook/demo/addressbook.h,
	addressbook/demo/addressbook-factory.c,
	addressbook/demo/addressbook-widget.c,
	addressbook/demo/addressbook-widget.h: New factory to create an
	addressbook bonobo component.

2000-03-13  bertrand  <bertrand@helixcode.com>

	* shell/e-shell.c (EShell_register_service): 
	test implementation. Show the uri and the type 
	of service that	has just been registered.
	
	* shell/e-shell-view.c (get_view): 
	once we have the bonobo control widget, 
	disable the autoactivation and activate
	the control frame.
	(get_view): added a parameter to have
	a reference to the EShellView.
	(get_view): In the case of the mail component
	use the Evolution_ServiceRepository to 
	give the component a reference to the 
	Shell server.

2000-03-12  bertrand  <bertrand@helixcode.com>

	* shell/e-shell-view.c (get_view): name change
	

	* shell/e-folder.c (e_folder_get_folder_type): added the
	get_e_folder_type function.

	* shell/evolution-service-repository.c:
	(evolution_service_repository_new): creates an 
	Evolution_ServiceRepository object.
	(create_evolution_service_repository): 
	create the corresponding servant.
	(evolution_service_repository_construct): set 