@@ -1,3 +1,15 @@
+2000-03-20  Matt Loper  <matt@helixcode.com>
+
+	* shell/e-shell-view.h: New private field in EShellView added,
+	which contains the notebook and a hashtable of folders to views.
+
+	* shell/e-shell-view.c (e_shell_view_set_view): Instead of
+	creating a new control every time we set the view, we now keep our
+	controls in a notebook. This function now switches to the correct
+	notebook page, or creates a new page/control as necessary.
+	(e_shell_view_new): Creates and inserts the notebook into the
+	shell.
+
 2000-03-17 Elliot Lee <sopwith@redhat.com>
 	* calendar/cal-client/Makefile.am,
 	calendar/cal-util/Makefile.am, calendar/gui/Makefile.am,
